--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Y Dharma Teja | Portfolio</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100 text-gray-900">
+  <!-- Navbar -->
+  <nav class="bg-white shadow-lg p-4 sticky top-0 z-50">
+    <div class="container mx-auto flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-indigo-600">Teja Portfolio</h1>
+      <div>
+        <a href="#about" class="px-3">About</a>
+        <a href="#skills" class="px-3">Skills</a>
+        <a href="#projects" class="px-3">Projects</a>
+        <a href="#contact" class="px-3">Contact</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="text-center py-20 bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
+    <h1 class="text-4xl font-bold mb-4">Hi, I'm Y Dharma Teja 👋</h1>
+    <p class="text-lg">Data Analyst | Front-End Developer | Machine Learning Enthusiast</p>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="container mx-auto py-16 px-6">
+    <h2 class="text-3xl font-bold text-center mb-6">About Me</h2>
+    <p class="text-center max-w-2xl mx-auto">I am a passionate Data Analyst and Front-End Developer skilled in Python, React, and Machine Learning. I enjoy building projects that combine analytics and clean user interfaces.</p>
+  </section>
+
+  <!-- Skills -->
+  <section id="skills" class="bg-gray-200 py-16">
+    <h2 class="text-3xl font-bold text-center mb-6">Skills</h2>
+    <div class="flex flex-wrap justify-center gap-4">
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">Python</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">HTML</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">CSS</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">JavaScript</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">React</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">Machine Learning</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">NumPy</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">Pandas</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">Matplotlib</span>
+      <span class="bg-indigo-500 text-white px-4 py-2 rounded-full">Scikit-Learn</span>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section id="projects" class="container mx-auto py-16 px-6">
+    <h2 class="text-3xl font-bold text-center mb-6">Projects</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="bg-white shadow-lg rounded-xl p-4">
+        <h3 class="font-bold text-xl">Missing Objects in Colleges</h3>
+        <p>A front-end project to help track lost and found items in colleges.</p>
+      </div>
+      <div class="bg-white shadow-lg rounded-xl p-4">
+        <h3 class="font-bold text-xl">Tree Species Classification</h3>
+        <p>Machine learning and deep learning project to classify tree species.</p>
+      </div>
+      <div class="bg-white shadow-lg rounded-xl p-4">
+        <h3 class="font-bold text-xl">Portfolio Website</h3>
+        <p>A responsive portfolio website built with HTML, CSS, and TailwindCSS.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="bg-gray-900 text-white py-16">
+    <h2 class="text-3xl font-bold text-center mb-6">Contact Me</h2>
+    <div class="text-center">
+      <p>Email: <a href="mailto:yadaganiteja@gmail.com" class="text-indigo-400">yadaganiteja@gmail.com</a></p>
+      <p>Phone: <a href="tel:+919381138257" class="text-indigo-400">+91 9381138257</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/teja-yadagani-1a01b72bb" class="text-indigo-400" target="_blank">Click Here</a></p>
+      <p>GitHub: <a href="https://github.com/Tejayadagani" class="text-indigo-400" target="_blank">Click Here</a></p>
+    </div>
+  </section>
+
+  <footer class="bg-gray-800 text-center text-white py-4">
+    <p>© 2025 Y Dharma Teja. All Rights Reserved.</p>
+  </footer>
+</body>
+</html>
