--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,24 +12,33 @@
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold text-indigo-600">Teja Portfolio</h1>
       <div>
-        <a href="#about" class="px-3">About</a>
-        <a href="#skills" class="px-3">Skills</a>
-        <a href="#projects" class="px-3">Projects</a>
-        <a href="#contact" class="px-3">Contact</a>
+        <a href="#about" class="px-3 hover:text-indigo-600">About</a>
+        <a href="#skills" class="px-3 hover:text-indigo-600">Skills</a>
+        <a href="#projects" class="px-3 hover:text-indigo-600">Projects</a>
+        <a href="#contact" class="px-3 hover:text-indigo-600">Contact</a>
       </div>
     </div>
   </nav>
 
   <!-- Hero Section -->
   <section class="text-center py-20 bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
-    <h1 class="text-4xl font-bold mb-4">Hi, I'm Y Dharma Teja 👋</h1>
-    <p class="text-lg">Data Analyst | Front-End Developer | Machine Learning Enthusiast</p>
+    <div class="flex flex-col items-center justify-center">
+      <!-- Your Photo -->
+      <img src="photo.jpg" alt="Y Dharma Teja" class="w-40 h-40 rounded-full border-4 border-white mb-6 object-cover">
+      <h1 class="text-4xl font-bold mb-4">Hi, I'm Y Dharma Teja 👋</h1>
+      <p class="text-lg max-w-xl">Data Analyst | Front-End Developer | Machine Learning Enthusiast</p>
+    </div>
   </section>
 
   <!-- About -->
   <section id="about" class="container mx-auto py-16 px-6">
     <h2 class="text-3xl font-bold text-center mb-6">About Me</h2>
-    <p class="text-center max-w-2xl mx-auto">I am a passionate Data Analyst and Front-End Developer skilled in Python, React, and Machine Learning. I enjoy building projects that combine analytics and clean user interfaces.</p>
+    <div class="flex flex-col md:flex-row items-center gap-8 max-w-4xl mx-auto">
+      <img src="photo.jpg" alt="Y Dharma Teja" class="w-48 h-48 rounded-full object-cover md:order-2">
+      <p class="text-center md:text-left text-lg">
+        I am a passionate Data Analyst and Front-End Developer skilled in Python, React, and Machine Learning. I enjoy building projects that combine analytics and clean user interfaces.
+      </p>
+    </div>
   </section>
 
   <!-- Skills -->
